# Sentineloops

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_create_core_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  accounts.py  health.py
backend/app/core/: config.py  lifecycle.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  account.py  base.py  finding.py  scan.py
backend/app/repositories/: __init__.py  accounts.py
backend/app/schemas/: __init__.py  account.py  health.py
backend/app/services/: __init__.py  accounts.py
docker/: README.md  docker-compose.yml
docs/: architecture.md  decisions.md  roadmap.md  threat-model.md
frontend/: README.md  package.json
frontend/src/: App.tsx  styles.css
scripts/: bootstrap.sh
terraform/: README.md
terraform/modules/app/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/iam/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/networking/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/storage/: README.md  main.tf  outputs.tf  variables.tf
tests/backend/: test_account_onboarding.py  test_app_structure.py  test_backend_packaging.py  test_db_bootstrap.py  test_docker_stack.py  test_models.py  test_repo_layout.py
workers/: README.md
