[project]
name = "sentinelops-backend"
version = "0.1.0"
description = "Backend API for SentinelOps"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
